# LumosDesktop

./: Cargo.toml  README.md
LumosDesktop-Rule/: directory_structure.md  rule.md  specifications.md  technical_requirements.md
benches/: theme_performance.rs
core/graphics/: dx_backend.rs  metal_backend.rs  mod.rs  renderer.rs  resource_manager.rs  shader_manager.rs  vulkan_backend.rs
core/settings/: mod.rs
core/settings/profile_manager/: mod.rs
core/settings/registry/: mod.rs
core/settings/schema/: mod.rs
core/settings/sync_agent/: mod.rs
core/system/: mod.rs  subsystem.rs
core/system/haptics/: README.md  aetheros_integration.rs  common.rs  linux.rs  macos.rs  mod.rs  ui_settings.rs  windows.rs
core/system/hardware_monitor/: cpu_monitor.rs  disk_monitor.rs  gpu_monitor.rs  memory_monitor.rs  mod.rs  network_monitor.rs  resource_alert.rs
core/system/notification_service/: mod.rs
core/system/power_interface/: events.rs  linux.rs  mod.rs
core/system/security/: context.rs  error.rs  mod.rs  permissions.rs  policy.rs  security_context.rs
core/system/security_context/: mod.rs  permission.rs  permissions.rs  policy.rs  sandbox.rs
core/window_manager/: mod.rs  window_manager.rs
core/window_manager/compositor/: wayland_compositor.rs
integration/: mod.rs
integration/aether_services/: mod.rs
integration/cloud_providers/: mod.rs
integration/compat/: mod.rs
integration/compat/layers/: mod.rs  (+4 more)
integration/nexus_bridge/: mod.rs
tests/: compat_test.rs  gesture_recognizer_test.rs  haptics_demo.rs  settings_test.rs
ui/theming/: README.md
(+24 files in other folders)
